--- a/_posts/2010-11-25-oracle-gunu-10.md
+++ b/_posts/2010-11-25-oracle-gunu-10.md
@@ -7,24 +7,22 @@ comments: true
 categories: [Ceturk Etkinlikleri]
 tags: [ceturk, H. Tonguç Yılmaz, Hüsnü Şensoy, oracle, oracle transaction, sql, sql performance analyzer, Talip Hakan Öztürk]
 ---
-![](http://semihkirdinli.files.wordpress.com/2011/10/20.gif?w=300 "20")
+![](/images/jekyll/20.gif?w=300 "20")
 
-Bugüne kadar çok farklı konu ve teknoloji ile ilgili yaptığı ücretsiz etkinliklerle bilişim sektörünün gelişmesine katkıda bulunan CETURK etkinliklerine büyük bir hızla devam ediyor. **4 Aralık 2010** tarihinde Bahçeşehir Üniversitesi'nde ” **CETURK – ORACLE Günü’10 ” **etkinliği gerçekleştirilecek. Bugüne kadar gerçekleştirilen gerek CETURK gerekse ORACLE etkinlikleri içerisinde konu ve konuşmacılarıyla öne çıkan bu etkinliğe katılım **ücretsiz** olacak.
+Bugüne kadar çok farklı konu ve teknoloji ile ilgili yaptığı ücretsiz etkinliklerle bilişim sektörünün gelişmesine katkıda bulunan CETURK etkinliklerine büyük bir hızla devam ediyor. 4 Aralık 2010 tarihinde Bahçeşehir Üniversitesi'nde "Ceturk–Oracle Günü’10" etkinliği gerçekleştirilecek. Bugüne kadar gerçekleştirilen gerek Ceturk gerekse Oracle etkinlikleri içerisinde konu ve konuşmacılarıyla öne çıkan bu etkinliğe katılım ücretsiz olacak.
 
-Etkinliğin konuşmacıları :
-
-
+**Etkinliğin Konuşmacıları:**
 *   Türkiye’de Oracle Certified Master(OCM) sertifikasına sahip tek kişi olan Cem Zorba,
-*   BI alanından Oracle ACED ve 2009 yılın Oracle DBA’yi unvanlarının sahibi ve bu ödüllere sahip Turkiye’deki tek, tüm dünyadaki en en geç uzman olan Hüsnü Şensoy,
+*   BI alanından Oracle ACED ve 2009 yılın Oracle DBA’yi unvanlarının sahibi ve bu ödüllere sahip Turkiye’deki tek, tüm dünyadaki en genç uzman olan Hüsnü Şensoy,
 *   10 seneyi aşan Oracle veritabanı tecrübesine sahip olan H. Tonguç Yılmaz,
 *   Özel bir bankada ORACLE DBA olarak çalışan Gökhan Karagözlü ve Talip Hakan Öztürk
 **Etkinlik Programı**
-<table width="594" border="0" cellspacing="0" cellpadding="0">
+<table width="600" border="0" cellspacing="0" cellpadding="0">
 <tbody>
 <tr>
-<td valign="bottom">**Saat**</td>
-<td valign="bottom">**Konu**</td>
-<td valign="bottom">**Konuşmacı**</td>
+<td valign="bottom">Saat</td>
+<td valign="bottom">Konu</td>
+<td valign="bottom">Konuşmacı</td>
 </tr>
 <tr>
 <td valign="bottom">10:00-10:15</td>
@@ -93,6 +91,6 @@ Etkinliğin konuşmacıları :
 </tr>
 </tbody>
 </table>
-**Ayrıntılı bilgi için **<a href="http://www.ceturk.com/ceturk-oracle-gunu-2010" target="_blank">**tıklayınız.
+Ayrıntılı bilgi için <a href="http://www.ceturk.com/ceturk-oracle-gunu-2010" target="_blank"> tıklayınız.
 
-**</a>**Etkinliğe kayıt için **<a href="http://forum.ceturk.com/etkinlikkayit.php" target="_blank">**tıklayınız.**</a>
+Etkinliğe kayıt için <a href="http://forum.ceturk.com/etkinlikkayit.php" target="_blank"> tıklayınız.
