--- a/_posts/2011-04-13-troug-day-2011.md
+++ b/_posts/2011-04-13-troug-day-2011.md
@@ -7,7 +7,7 @@ comments: true
 categories: [Seminer &amp; Etkinlik]
 tags: [apex, etkinlik, Jonathan Lewis, oracle, Seminer, troug, TROUG Day]
 ---
-![](http://semihkirdinli.files.wordpress.com/2011/10/26.gif "26")
+![](/images/jekyll/26.gif "26")
 
 2010 yılında International Oracle Users Group Community (IOUC) tarafından kabul görerek kurulan Türk Oracle Kullanıcıları Grubu ([http://troug.org](http://troug.org/)), her yıl düzenlemeyi hedeflediği “TROUG Day” etkinliğinin ilki ile 21 Nisan’da Türk Oracle kullanıcılarını buluşturuyor. Katılımın ücretsiz olacağı bu etkinlikte, konusunun uzmanlarından teknik sunumlar ve katılımcıların sorularıyla yönlendireceği “TROUG Panel” oturumu yer alacak. Ayrıca günün sonunda Bilginç IT akademi tarafından çekilişle birer kişiye Oracle 11g OCP ve Oracle/Sun Java sertifika eğitimleri hediye edilecektir.
 
@@ -27,20 +27,20 @@ Etkinlimize lokasyon ya da kapasite nedenleriyle yerinde katılma fırsatı bula
 
 09:00-10:00 Açılış &amp; Thinking About Joins: Jonathan Lewis
 10:00-10:50 20+ Soruda Exadata: Ferhat Şengönül &amp; Hüsnü Şensoy
-10:50-11:00 *Kahve Molası
-*11:00-12:00 Enterprise Manager 11gGrid Control: Gökhan Atıl
+10:50-11:00 Kahve Molası
+11:00-12:00 Enterprise Manager 11gGrid Control: Gökhan Atıl
 12:00-13:00 Öğle Yemeği Molası
 13:00-14:00 Oracle Dataguard: Nasıl Daha Efektif Kullanırız? Emre Baransel &amp; Ogan Özdoğan
 14:00-14:50 ASM Best Practices: Orhan Bıyıklıoğlu
-14:50-15:00 *Kahve Molası*
+14:50-15:00 Kahve Molası
 15:00-16:00 11g Backup &amp; RecoveryNew Features: Kamran Agayev &amp; Zekeriya Beşiroğlu
 16:00-16:50 PL/SQL ile Web 2.0: JavaScript ve Javacılar nasıl kıskançlıktan çatlatılır? Yalım K. Gerger
-16:50-17:00 *Kahve Molası*
+16:50-17:00 Kahve Molası
 17:00-18:00 TROUG Panel: H.Tonguç Yılmaz, Kamran Agayev,O. Yasin Saygılı, Talip Hakan Öztürk, Gökhan Atıl, Emre Baransel
 
 **Etkinlik Yer ve Zamanı**
 
 Tarih: 21 Nisan Perşembe
-Yer: Bahçeşehir Üniversitesi /Beşiktaş Kampüsü – İstanbul
+Yer: Bahçeşehir Üniversitesi/Beşiktaş Kampüsü – İstanbul
 
 Ücretsiz kaydolmak için: [http://apex.oracle.com/pls/apex/f?p=38448:2](http://apex.oracle.com/pls/apex/f?p=38448:2)
