A post was updated about wcf.
Post title was changed as "WCF".

--- a/_posts/2016-02-17-wcf.md
+++ b/_posts/2016-02-17-wcf.md
@@ -7,9 +7,7 @@ comments: true
 categories: [WCF]
 tags: [.net, dağıtık, mimari, WCF, wcf service, web service]
 ---
-Uzun yazılar yazmıyordum okuması sıkıcı olur diye. Ancak baktım ve gördüm ki, bir bütün halinde olan uzun yazılar da sıkılmadan okunabiliyor. Bu yazı dizisinde WCF(Windows Communication Foundation) teknolojisinden bahsedeceğim. WCF teknolojisini projelerimin hemen hemen hepsinde kullanmaktayım, bu yüzden daha ayrıntılı ele almak istiyorum. Yazının birinci bölümünde amacım WCF’e kısa bir giriş yapmak.
-
-“Globalleşen dünyada...” diye başlamak isterdim cümleye ancak “Gerçek hayatta...” diye başlamak daha doğru olur. Evet;
+Uzun yazılar yazmıyordum sıkıcı olur diye. Ancak baktım ve gördüm ki, bir bütün halinde olan uzun yazılar da sıkılmadan okunabiliyor. Bu yazı dizisinde WCF(Windows Communication Foundation) teknolojisinden bahsedeceğim. WCF teknolojisini projelerimin hemen hemen hepsinde kullanmaktayım, bu yüzden daha ayrıntılı ele almak istiyorum. Yazının birinci bölümünde amacım WCF’e kısa bir giriş yapmak.
 
 Uzun seneler önce yazılımcılar kod yazardı, kodu yazdığı makinede de bu kodu kullanırdı. Kod yazmaya devam ettiler ve istediler ki bu kodları, programları başkaları da kullanabilsin. Sunucular ortaya çıktı ve sunucuya kurulum yapıldı, sunucular üzerinden programlar, ortak kullanılmaya başlandı. Şimdi ise birbiriyle entegre çalışan sistemler yaygın olarak kullanılıyor ve herkes birbirine web service veriyor, web service çağırıyor, vs. Kısacası bir sunucu da yetmiyor artık. Sunucular gerekiyor. Web service günümüz yazılımcılarının projelerinde çok sık kullandığı uygulamalar haline geldi. Veri transferi anlamında çok önemli işler, bu sayede yapılabiliyor. Örneğin bir veri transfer edileceği zaman şifrelenmiş şekilde gönderilebiliyor ve web service’i çağıran tarafın da, bu şifreyi çözerek istenilen bilgiye erişmesi sağlanabiliyor.
 
